fix: adjust margin for better alignmen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -712,7 +712,7 @@ input {
     .hero-section-wrapper h3 {
         font-size: 0.625rem;
         padding-bottom: 1px;
-        margin-bottom: 5px;
+        margin-bottom: -1px;
     }
 
 }
